Change default value of aria-valuenow on some roles

According from ARIA 1.1 [1],
default values for aria-valuenow were changed as below.
- scrollbar, slider
  : half way between aria-valuemin and aria-valuemax
- separator : 50
- spinbutton : 0

[1] https://www.w3.org/WAI/ARIA/wiki/ARIA_1.1_Changes

BUG=768126

Change-Id: I670ea1a0c940665161598b0b3e81bcbe1583419a
Reviewed-on: https://chromium-review.googlesource.com/652091
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522097}
Former-commit-id: 6398aeacc6a29db61ce7ff6111baf5c8c10cdbc8